CKS-EXAM/runtime-class(gvisor).yml
# RuntimeClass is defined in the node.k8s.io API group
---
#Update the runtimeClassName in pods yaml under spec section
apiVersion: v1
kind: Pod
metadata:
  name: mypod
labels:
  app: runtime
spec:
  runtimeClassName: the name of the runtime Class

#Create the pod using the above yaml
