CKS-EXAM/secret-decryption.yaml
#A secret is being passed as env variable inside the pod. We have to decryopt it and store it in a file
#kubectl get secret secret_name -n namespace -o jsonpath='{.data.CONNECTOR_PASSWORD}' | base64 -d > /root/CKS/CONNECTOR_PASSWORD
#echo 'UyFCXCpkJHpEc2I9' | base64 --decode
#Post this we have to mount this secret as readOnly volume at path /mnt/connector/password
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: app-xyz
  name: app-xyz
  namespace: orion
spec:
  containers:
  - image: nginx
    name: app-xyz
    ports:
    - containerPort: 3306
    volumeMounts:
    - name: secret-volume
      mountPath: /mnt/connector/password
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: a-safe-secret
