CKS-EXAM/securitycontext.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-container-app
  template:
    metadata:
      labels:
        app: multi-container-app
    spec:
      securityContext:
        runAsUser: 65534
        # Ensure that the containers are not allowed to escalate privileges
        fsGroup: 1000
      containers:
        - name: container-1
          image: nginx:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 80
        - name: container-2
          image: busybox
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command: ["sleep", "3600"]
        - name: container-3
          image: alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command: ["sleep", "3600"]
