CKS-EXAM/serviceaccounttokenprojection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: projected-volume-token-pod
spec:
  serviceAccountName: your-service-account
  containers:
  - name: example-container
    image: busybox
    command: ["/bin/sh", "-c", "tail -f /dev/null"]
    volumeMounts:
    - name: token-volume
      mountPath: /var/run/secrets/tokens
  volumes:
  - name: token-volume
    projected:
      sources:
      - serviceAccountToken:
          path: token
          expirationSeconds: 3600
